# ak-plan-optimierung

./: .flake8  .gitignore  README.md  ak_opt-ILP.tex  ak_plan.py  flake.nix  generator.py  koma-plan-iis.ilp  micromamba.nix  noxfile.py  pulp_solve.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_output.py  todo.txt
.github/workflows/: nox.yml  pr-tests.yml  push-tests.yml  release.yml
beispielinputs/: test1.json
beispielinputs/test1/: test1.csv
beispielinputs/test2/: AK-Praeferenzen.csv  Ak-Planung_Infos_zu_den_AK_manuell.csv  input.csv  input.json
examples/: koma89.json  koma90.json  koma91.json  koma92.json  test1.json  test2.json  test_10a_15p_4r_5rc_0.25rc-lam_0.json  test_20a_100p_4r_5rc_0.25rc-lam_0.json  test_20a_20p_3r_5rc_0.25rc-lam_0.json  test_20a_20p_5r_5rc_0.25rc-lam_10confl_0.json  test_20a_20p_5r_5rc_0.25rc-lam_10dep_0.json  test_20a_20p_5r_5rc_0.25rc-lam_3confl_3dep_0.json  test_20a_20p_5r_5rc_0.25rc-lam_5confl_5dep_0.json  test_20a_40p_4r_5rc_0.25rc-lam_0.json  test_30a_20p_3r_5rc_0.25rc-lam_0.json  test_40a_10p_4r_5rc_0.25rc-lam_0.json  test_40a_70p_4r_10rc_1.00rc-lam_0.json
inputs/: test1.csv  test1.json
koma88-preparation/: AK_Liste_KoMa88.ods  AK_Liste_KoMa88_Sa.ods  KoMa-aklist2.csv  KoMa-pref-v2.csv  KoMa-v1.json  KoMa-v2.json  KoMa-v3.json  KoMa88_Kaiserslautern_AK-Präferenzen.csv  export.ipynb  export.json  export_to_json.ipynb  out-export.json  output.csv  output.ods
koma89/: export.ipynb  export.json  out-export.json
koroma/test1/: test1.csv  test1.json  test1_out.csv
koroma/test2/: out.csv  test.csv  test.json
src/akplan/: __init__.py  constraints.py  generate_input.py  lparray.py  monkeypatch_linopy.py  pulp_solve.py  solve.py  types.py  util.py
tests/: test_output.py  test_schedule_feasibility.py
