[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "akplan"
description = "Optimal conference schedules with ILPs"
version = "0.0.2-dev"
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Progranmming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "dacite",
    "tqdm",
    "numpy",
    "linopy",
    "typing_extensions",
]

[project.optional-dependencies]
format = ["black", "isort"]
lint = [
    "flake8",
    "flake8-colors",
    "flake8-black",
    "flake8-docstrings",
    "flake8-bugbear",
    "flake8-broken-line",
    "pep8-naming",
    "pydocstyle",
    "darglint",
]
test = ["highspy", "gurobipy", "pytest", "pytest-timeout"]
coverage = ["coverage"]
typing = ["pytest", "mypy"]


[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
Source = "https://github.com/Die-KoMa/ak-plan-optimierung"
Download = "https://github.com/Die-KoMa/ak-plan-optimierung/releases"
Issues = "https://github.com/Die-KoMa/ak-plan-optimierung/issues"

[project.scripts]
akplan-solve = "akplan.solve:main"
