[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "akplan"
description = "Optimal conference schedules with ILPs"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "dacite",
    "tqdm",
    "numpy",
    "pandas",
    "xarray",
    "linopy",
]

[project.optional-dependencies]
format = ["ruff"]
lint = ["ruff"]
test = ["highspy", "gurobipy", "pytest", "pytest-timeout"]
coverage = ["coverage"]
typing = ["pytest", "mypy"]

[project.urls]
Source = "https://github.com/Die-KoMa/ak-plan-optimierung"
Download = "https://github.com/Die-KoMa/ak-plan-optimierung/releases"
Issues = "https://github.com/Die-KoMa/ak-plan-optimierung/issues"

[project.scripts]
akplan-solve = "akplan.solve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
akplan = ["py.typed"]

[tool.setuptools_scm]
version_file = "src/akplan/version.py"
version_scheme = "python-simplified-semver"

[tool.mypy]
packages = ["akplan", "tests"]
python_version = "3.11"
strict = true
install_types = true
non_interactive = true
exclude_gitignore = true

[tool.ruff]
extend-exclude = ["*.ipynb"]
target-version = "py311"

[tool.ruff.lint]
select = [
    'F',   # pyflakes
    'E',   # pycodestyle: Error
    'W',   # pycodestyle: Warning
    'I',   # isort
    'D',   # pydocstyle
    'UP',  # pyupgrade
    'TID', # flake8-tidy-imports
    'NPY', # numpy
    'B',   # flake8-bugbear
    'A',   # flake8-builtins
    'G',   # flake8-logging-format
    'LOG', # flake8-logging
    'N',   # pep8-naming
]
ignore = [
    "D203", # blank line before class docstring
    "D213", # multiline docstr starts on second line
    "D413", # blank line after 'Args:'
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
