##########################
# Setup.py Configuration #
##########################
[metadata]
name = akplan
version = 0.0.1-dev
description = Optimal conference schedules with ILPs
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/Die-KoMa/ak-plan-optimierung
download_url = https://github.com/Die-KoMa/ak-plan-optimierung/releases
project_urls =
    Bug Tracker = https://github.com/Die-KoMa/ak-plan-optimierung/issues
    Source Code = https://github.com/Die-KoMa/ak-plan-optimierung

[options]
install_requires =
    dacite
    numpy
    pulp @ git+https://github.com/coin-or/pulp

packages = find:
package_dir =
    = src

[options.packages.find]
where = src


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short
